# pbi_core

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  conftest.py  diff_tester.py  index.html  objects.inv  pyproject.toml
SSAS/SSAS_ERD/: index.html
SSAS/entities/alternate_of/: index.html
SSAS/entities/annotation/: index.html
SSAS/entities/attribute_hierarchy/: index.html
SSAS/entities/calc_dependency/: index.html
SSAS/entities/calculation_group/: index.html
SSAS/entities/calculation_item/: index.html
SSAS/entities/column/: index.html
SSAS/entities/column_permission/: index.html
SSAS/entities/culture/: index.html
SSAS/entities/data_source/: index.html
SSAS/entities/detail_row_definition/: index.html
SSAS/entities/expression/: index.html
SSAS/entities/extended_property/: index.html
SSAS/entities/format_string_definition/: index.html
SSAS/entities/group_by_column/: index.html
SSAS/entities/hierarchy/: index.html
SSAS/entities/kpi/: index.html
SSAS/entities/level/: index.html
SSAS/entities/linguistic_metadata/: index.html
SSAS/entities/measure/: index.html
SSAS/entities/model/: index.html
SSAS/entities/object_translation/: index.html
SSAS/entities/partition/: index.html
SSAS/entities/perspective/: index.html
SSAS/entities/perspective_column/: index.html
SSAS/entities/perspective_hierarchy/: index.html
SSAS/entities/perspective_measure/: index.html
SSAS/entities/perspective_set/: index.html
SSAS/entities/perspective_table/: index.html
SSAS/entities/query_group/: index.html
SSAS/entities/refresh_policy/: index.html
SSAS/entities/related_column_detail/: index.html
SSAS/entities/relationship/: index.html
SSAS/entities/role/: index.html
SSAS/entities/role_membership/: index.html
SSAS/entities/set/: index.html
SSAS/entities/table/: index.html
SSAS/entities/table_permission/: index.html
SSAS/entities/variation/: index.html
SSAS/infra/base_server/: index.html
SSAS/infra/local_server/: index.html
SSAS/overview/: index.html
development/testing/: index.html
docs/: mkdocs.yml
docs/docs/: base.css  index.md  quick_start.md
docs/docs/SSAS/: SSAS_ERD.md  batching_queries.md  overview.md
docs/docs/development/: testing.md
docs/docs/general/: ecosystem.md  goals.md  quick_start.md
docs/docs/ruff/: main.md
docs/source/: conf.py  examples.rst  index.rst  layout_api.rst  pbyx_api.rst  setup.rst  ssas_api.rst
docs/source/ssas_records/: _group.rst  calculation_group.rst  column.rst  culture.rst  detail_row_definition.rst  expression.rst  extended_property.rst  group_by_column.rst  hierarchy.rst  kpi.rst  level.rst  model.rst  object_translation.rst  perspective.rst  perspective_column.rst  query_group.rst  role_membership.rst  set.rst  table_permission.rst  variation.rst
general/ecosystem/: index.html
general/goals/: index.html
general/quick_start/: index.html
general/setup/: index.html
layout/erd/ActionButton/: index.html
layout/erd/AggregationExpression/: index.html
layout/erd/AggregationSource/: index.html
layout/erd/AlgorithmExpression/: index.html
layout/erd/AndCondition/: index.html
layout/erd/ArithmeticSource/: index.html
layout/erd/BarChart/: index.html
layout/erd/BasicShape/: index.html
layout/erd/Bookmark/: index.html
layout/erd/BookmarkFilter/: index.html
layout/erd/BookmarkVisual/: index.html
layout/erd/Card/: index.html
layout/erd/ClusteredColumnChart/: index.html
layout/erd/ColumnChart/: index.html
layout/erd/ColumnExpression/: index.html
layout/erd/ColumnProperty/: index.html
layout/erd/ColumnSource/: index.html
layout/erd/ComparisonCondition/: index.html
layout/erd/Condition/: index.html
layout/layout/: index.html
old_docs/source/: examples.rst  pbyx.rst
other/style_decisions/: index.html
pbi_core/: __init__.py  __main__.py  logging.py  main.py
pbi_core/attrs/: __init__.py  attrs.py  cattrs.py  extra.py
pbi_core/git/: __init__.py  change_classes.py  layout.py  main.py  ssas.py  to_markdown.py
pbi_core/layout/: __init__.py  _base.py  _base_node.py  bookmark.py  condition.py  filters.py  layout.py  main.py  resource_package.py  section.py  util.py  visual_properties.py
pbi_core/lineage/: __init__.py  main.py
pbi_core/misc/: __init__.py  remove_workspaces.py
pbi_core/pydantic/: attrs.py  cattrs.py  extra.py  extra_json.py
pbi_core/ruff/: base_rule.py  main.py
pbi_core/setup/: main.py
pbi_core/static_elements/: __init__.py  static_elements.py
pbi_core/static_files/: __init__.py  model_references.py  static_files.py
powerbi_references/SSAS_Architecture/: index.html
powerbi_references/layout_architecture/: index.html
prototype_query_ref/: expression.cs  order_by.cs  prototype_query.cs  query_string.cs  transform.cs
quick_start/: index.html
ruff/main/: index.html
schemas/: definition.json
search/: search_index.json
setup/: index.html
style_decisions/: index.html
tests/quick_start/: test_altering_data_model.py  test_automatic_data_model_cleansing.py  test_exporting_records.py  test_lineage_chart.py  test_performance_analysis.py
tests/report/: test_load.py
tests/test_quick_starts/: test_altering_data_model.py  test_automatic_data_model_cleansing.py  test_exporting_records.py  test_lineage_chart.py  test_multilanguage_support.py  test_performance_analysis.py
(+524 files in other folders)
