[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbi_core"
dependencies = []
description = "Accessing PBIX files programmatically"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "backoff>=2.2.1",
  "beautifulsoup4>=4.12.3",
  "GitPython>=3.1",
  "jinja2>=3.1.4",
  "lxml>=5.3.0",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
  "psutil>=6.0.0",
  "pydantic>=2.9.1",
  "pytest>=8.3.2",
  "python_mermaid>=0.1.3",  # underscore is smaller than lower case letters
  "pythonnet>=3.0.3",
  "requests>=2.32.3",
  "sphinx>=8.0.2",
  "structlog>=24.4.0",
]
docs = ["pydata-sphinx-theme>=0.15.4", "sphinx-autobuild-2024.9.17"]

[tool.hatch.version]
path = "pbi_core/__init__.py"

[tool.doc8]
max-line-length = 120
file-encoding = "utf8"

[tool.ruff]
line-length = 120
preview = true
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests/**"]
skips = ["B101"]

[tool.mypy]
disable_error_code = "import-untyped"
