[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbi_core"
description = "Accessing PBIX files programmatically"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
  "backoff>=2.2.1",
  "beautifulsoup4>=4.12.3",
  "build>=1.2.2",
  "python-dotenv>=1.0.1",
  "GitPython>=3.1",
  "jinja2>=3.1.4",
  "jsondiff>=2.2.1",
  "lxml>=5.3.0",
  "mermaid @ git+http://gitea.matthew-hamilton.com/PowerBI/mermaid",
  # pyadomd>=1.0.0
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
  "psutil>=6.0.0",
  "pydantic>=2.9.1",
  "pydantic-extra-types>=2.9.0",
  "pytest>=8.3.2",
  "pythonnet>=3.0.3",
  "requests>=2.32.3",
  "sphinx>=8.0.2",
  "semver>=3.0.2",
  "structlog>=24.4.0",
  "click>=8.1.8",
  "inquirer>=3.4.0",
  # "pbi_translation @ git+http://gitea.matthew-hamilton.com/PowerBI/prototype_parsing/releases/download/v1.0.1/pbi_translation-1.0.1-py2.py3-none-any.whl",
]
docs = ["pydata-sphinx-theme>=0.15.4", "sphinx-autobuild>=2024.9.17"]
internationalization = ['openpyxl>=3.1.5', 'langcodes>=3.4.1']

[tool.hatch.version]
path = "pbi_core/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true # needed for mermaid dep

[tool.doc8]
max-line-length = 120
file-encoding = "utf8"

[tool.ruff]
line-length = 120
preview = true
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
  "CPY001",  # https://docs.astral.sh/ruff/rules/missing-copyright-notice/
  "DOC201",  # https://docs.astral.sh/ruff/rules/docstring-missing-returns/
  "D100",    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
  "D401",    # https://docs.astral.sh/ruff/rules/non-imperative-mood/
  "ERA001",  # https://docs.astral.sh/ruff/rules/commented-out-code/
  "N815",    # https://docs.astral.sh/ruff/rules/mixed-case-variable-in-class-scope/ ignored for now. Can be undone by replacing the pydantic fields with Field(alias=...)
  "PLR1722", # https://docs.astral.sh/ruff/rules/sys-exit-alias/
  "RUF012",
  "SLF001",  # https://docs.astral.sh/ruff/rules/private-member-access/
  "S101",
  "T100",    # https://docs.astral.sh/ruff/rules/debugger/
  "T201",    # https://docs.astral.sh/ruff/rules/print/
  "TD002",
  "TD003",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
]

[tool.ruff.lint.per-file-ignores]
"pbi_core/ssas/server/trace/events/*.py" = ["E501"]

[tool.bandit]
exclude_dirs = ["tests/**"]
skips = ["B101"]

[tool.mypy]
disable_error_code = "import-untyped"
